--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,6 +7,6 @@
         </header>
     </body>
     <footer style="background:#00FF00; color: #000000; height:60px;width:100%;text-align:center;display:flex; justify-content: center;align-items:center; position:fixed; bottom: 0">
-        Best school
+	    <p>Best school</p>
     </footer>
 </html>
