--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -9,19 +9,20 @@
             body header {
                 background:#FF0000;
                 height:70px;
-                width:100%; 
-                position:fixed;
+                width:100%;
+                position: static;
                 top: 0
             }
             body footer {
-                background:#00FF00; color: #000000; 
+                background:#00FF00; 
+                color: #000000;
                 height:60px;
                 width:100%;
                 text-align:center;
-                display:flex; 
+                display:flex;
                 justify-content: center;
-                align-items:center; 
-                position:fixed; 
+                align-items:center;
+                position: static;
                 bottom: 0
             }
         </style>
@@ -29,8 +30,8 @@
     <body>
         <header>
         </header>
+        <footer>
+            <p>Best school</p>
+        </footer>
     </body>
-    <footer>
-	    <p>Best school</p>
-    </footer>
 </html>
